database movie first draft

--- a/freeman/css/style.css
+++ b/freeman/css/style.css
@@ -1,6 +1,8 @@
-/*Learn this code*/
+/*This is a comment*/
 body{
     font-family: Georgia, Times, Times New Roman, serif;
+    @-ms-viewport { width: device-width; }
+    
     }
 
 h1  {
